[gd_scene format=3 uid="uid://r3vb11qv1rqd"]

[ext_resource type="Script" uid="uid://nktooxdiorm4" path="res://scenes/items/weapons/hamme_of_justice.gd" id="1_3f5mt"]
[ext_resource type="Texture2D" uid="uid://eidcb45cb1h1" path="res://assets/Pixel Crawler - Free Pack 2.0.4/Pixel Crawler - Free Pack/Weapons/Wood/Wood.png" id="1_tns63"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3f5mt"]
radius = 68.26419

[sub_resource type="Animation" id="Animation_qkcbc"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-66, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(3.1415927, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GPUParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3f5mt"]
resource_name = "strike"
length = 2.8333333
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.33333334, 0, 0, 0, 0, -0.33333334, 0, 0, 0),
"times": PackedFloat32Array(0, 2, 2.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -66, -0.33333334, 11, 0, 0, 0, -0.33333334, -11, 0, 0),
"times": PackedFloat32Array(0, 2, 2.3)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 3.1415927, -0.33333334, -0.5235988, 0, 0),
"times": PackedFloat32Array(0, 2)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.2666667, 2.4333334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GPUParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2.32, 2.7333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qkcbc"]
_data = {
&"RESET": SubResource("Animation_qkcbc"),
&"strike": SubResource("Animation_3f5mt")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3f5mt"]
lifetime_randomness = 0.02
particle_flag_disable_z = true
radial_velocity_min = 34.359978
radial_velocity_max = 154.50998
gravity = Vector3(0, 0, 0)
radial_accel_min = -38.08
radial_accel_max = 72.99999
scale_max = 2.0
color = Color(0, 0, 0, 1)

[node name="HammeOfJustice" type="Area2D" unique_id=378938450]
script = ExtResource("1_3f5mt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1645063073]
shape = SubResource("CircleShape2D_3f5mt")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=541642707]
position = Vector2(0, -66)
rotation = 3.1415927
texture = ExtResource("1_tns63")
region_enabled = true
region_rect = Rect2(14.632164, 15.991441, 17.985886, 30.955925)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=786214276]
libraries/ = SubResource("AnimationLibrary_qkcbc")
autoplay = &"strike"

[node name="GPUParticles2D" type="GPUParticles2D" parent="." unique_id=1637636932]
visible = false
top_level = true
z_index = 10
position = Vector2(0, 15)
emitting = false
amount = 10
lifetime = 0.7
one_shot = true
speed_scale = 0.7
explosiveness = 0.95
fixed_fps = 60
trail_lifetime = 0.01
trail_sections = 2
trail_section_subdivisions = 2
process_material = SubResource("ParticleProcessMaterial_3f5mt")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
